# actor-model

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: chain-demo.cpp  channel-demo.cpp  channel-demo2.cpp  channel-demo3.cpp  channel-demo4.cpp  logging-demo.cpp  time-server-demo.cpp
include/actor/: actor-impl.h  actor.h  actor.hpp  channel.hpp  message.h  message.hpp
